<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.zgq.lovebuy.ui.activity.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rv_home_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/include_toolbar_statusbar" />

                <FrameLayout
                    android:id="@+id/fragment_container"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >
                </FrameLayout>
            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_home_cover"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/status_bar_height"
            android:alpha="0.8"
            android:background="@color/bg_white"
            android:clickable="false" />

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/float_button_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            fab:fab_addButtonColorNormal="@color/white"
            fab:fab_addButtonColorPressed="@color/white_pressed"
            fab:fab_addButtonPlusIconColor="@color/half_black"
            fab:fab_addButtonSize="normal"
            fab:fab_labelStyle="@style/float_action_menu_style"
            fab:fab_labelsPosition="left">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/flaot_button_desire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/white"
                fab:fab_colorPressed="@color/white_pressed"
                fab:fab_size="mini"
                fab:fab_title="@string/add_desire" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/flaot_button_conusm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/white"
                fab:fab_colorPressed="@color/white_pressed"
                fab:fab_size="mini"
                fab:fab_title="@string/add_consum" />

        </com.getbase.floatingactionbutton.FloatingActionsMenu>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lv_drawer_view"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/bg_consum_detail_dialog_title">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_avatar"
                app:civ_border_width="2dp"
                app:civ_border_color="#FFFFFFFF"/>

            <TextView
                android:textColor="@color/text_white"
                android:id="@+id/tv_my_user"
                android:textSize="@dimen/small_text_size"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/status_bar_height" />
        <ListView
            android:id="@+id/lVi_left_drawer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/background"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp" />

        <TextView
            android:id="@+id/tv_config"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="20dp"
            android:background="@color/bg_gray"
            android:clickable="true"
            android:text="@string/action_settings"
            android:textSize="@dimen/small_text_size" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
